--- a/box.html
+++ b/box.html
@@ -12,6 +12,13 @@
             margin: 10px;
             padding: 10px;
         }
+        .big-box{
+            width: 700px;
+            height: 700px;
+            border: 1px solid black;
+            margin: 10px;
+            padding: 10px;
+        }
 
     .text-center{
         text-align: center;
@@ -75,11 +82,55 @@
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
+    </div>
+    <br>
+    <hr>
+    <br>
+    <!-- 6 -->
+    <div class="big-box container flex-center sero-center">
+        <div>
+            <div class="container">
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
+            <div class="container">
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
+            <div class="container">
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
         </div>
+    </div>
 
     <br>
+    <hr>
     <br>
-    <br>
+    <div class="big-box container flex-center sero-center">
+        <div class="container">
+            <div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
+            <div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
+            <div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
+        </div>
+    </div>
+        
+
     <br>
     <br>
     <br>
